--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@iconify/svelte": "^2.2.1",
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "1.0.0-next.34",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
 		"@types/lodash": "^4.14.182",
@@ -43,6 +44,7 @@
 		"bulma": "^0.9.4",
 		"cookie": "^0.4.1",
 		"mdsvex": "^0.10.6",
-		"sass": "^1.52.3"
+		"sass": "^1.52.3",
+		"underscore": "^1.13.4"
 	}
 }
