--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"publish": "rsync -r build/ vis4.net:./drivenbydata/portfolio2/"
 	},
 	"devDependencies": {
 		"@fontsource/roboto": "^4.5.7",
