--- a/package.json
+++ b/package.json
@@ -14,34 +14,35 @@
 		"publish": "pnpm run build && (cd build && rsync -r --progress . vis4.net:drivenbydata/portfolio2/)"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@types/eslint": "^9.6.0",
-		"bulma": "^1.0.2",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"mdsvex": "^0.12.3",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.2.7",
-		"sass-embedded": "^1.80.3",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/eslint": "^9.6.1",
+		"bulma": "^1.0.4",
+		"eslint": "^9.27.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.0",
+		"globals": "^16.1.0",
+		"mdsvex": "^0.12.6",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.4.0",
+		"sass-embedded": "^1.89.0",
+		"svelte": "^5.32.1",
+		"svelte-check": "^4.2.1",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.32.1",
+		"vite": "^6.3.5",
 		"vite-plugin-dynamic-import": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/roboto": "^5.1.0",
+		"@fontsource-variable/roboto": "^5.2.5",
+		"@fontsource/roboto": "^5.2.5",
 		"@iconify-icons/ion": "^1.2.10",
 		"@iconify-icons/mdi": "^1.2.48",
-		"@iconify/svelte": "^4.0.2",
-		"es-toolkit": "^1.25.2",
+		"@iconify/svelte": "^5.0.0",
+		"es-toolkit": "^1.38.0",
 		"vidstack": "^1.12.11"
 	}
 }
