--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"compress-images": "cd static/images/2025 && pngquant --ext .png --force *.png",
 		"publish": "pnpm run build && (cd build && rsync -r --progress . vis4.net:drivenbydata/portfolio2/)"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.36.2",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/enhanced-img": "^0.9.2",
+		"@sveltejs/kit": "^2.49.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@types/eslint": "^9.6.1",
 		"bulma": "^1.0.4",
-		"eslint": "^9.34.0",
+		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.11.0",
-		"globals": "^16.3.0",
+		"eslint-plugin-svelte": "^3.14.0",
+		"globals": "^17.0.0",
 		"mdsvex": "^0.12.6",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"sass-embedded": "^1.90.0",
-		"svelte": "^5.38.3",
-		"svelte-check": "^4.3.1",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.40.0",
-		"vite": "^6.3.5",
+		"prettier": "^3.7.4",
+		"prettier-plugin-svelte": "^3.4.1",
+		"sass-embedded": "^1.97.2",
+		"svelte": "^5.46.1",
+		"svelte-check": "^4.3.5",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.52.0",
+		"vite": "^7.3.1",
 		"vite-plugin-dynamic-import": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/roboto": "^5.2.6",
-		"@fontsource-variable/roboto-flex": "^5.2.6",
-		"@fontsource/roboto": "^5.2.6",
+		"@fontsource-variable/roboto": "^5.2.9",
+		"@fontsource-variable/roboto-flex": "^5.2.8",
+		"@fontsource/roboto": "^5.2.9",
 		"@iconify-icons/ion": "^1.2.10",
 		"@iconify-icons/mdi": "^1.2.48",
-		"@iconify/svelte": "^5.0.1",
-		"es-toolkit": "^1.39.10",
+		"@iconify/svelte": "^5.2.1",
+		"es-toolkit": "^1.43.0",
 		"vidstack": "^1.12.11"
 	}
 }
